tests/==out/lang_spectre.2.gc.out
parameters z=10k  > boo.parameters
                  ^ ? syntax error
Cin  (b in vcc)  capacitor     c=1u 
           ^ ? too many: requested=3 max=2
Cout (c) capacitor     c=1u 
         ^ ? need 1 more nodes, grounding
Rin   in 0 vcc  resistor      r=100k 
           ^ ? too many: requested=3 max=2
Rout out resistor      r=100k 
         ^ ? need 1 more nodes, grounding
model zz npn   level=1 kf=NA( 0.) af=NA( 1.) bf=150 br=NA( 1.) is=NA( 100.E-18) nf=NA( 1.) nr=NA( 1.) c4=NA( 0.) nc=NA( 2.) c2=NA( 0.) ne=NA( 1.5) rb=NA( 0.) re=NA( 0.) rc=NA( 0.) cjc=NA( 0.) cje=NA( 0.) cjs=NA( 0.) mjc=NA( 0.33) mje=NA( 0.33) mjs=NA( 0.) vjc=NA( 0.75) vje=NA( 0.75) vjs=NA( 0.75) xcjc=NA( 1.) itf=NA( 0.) ptf=NA( 0.) tf=NA( 0.) tr=NA( 0.) xtf=NA( 0.) xtb=NA( 0.) xti=NA( 3.) eg=NA( 1.11)

subckt dumb_resistor (a b)
*//parameters r=10k 
R1 (a b) resistor  r=r
ends dumb_resistor

subckt foo (vcc in out)
Rc (c vcc) resistor  r=z
q1 (c b e) zz  area=NA( 1.)
Re (e 0 vcc) dumb_resistor  r=abs(-z)/10
Rb1 (b vcc) resistor  r=100k
Rb2 (b 0) dumb_resistor  r=r
Cin (b in) capacitor  c=1u
Cout (c 0) capacitor  c=1u
Rin (in 0) resistor  r=100k
Rout (out 0) resistor  r=100k
ends foo

X1 (V_cc amp_in out) foo  r=10k
Rin1 (in amp_in) resistor  r=10*(1-gain)
Rin2 (amp_in 0) resistor  r=10*gain
Vin (in 0) vsource  AC  0.2
Vcc (V_cc 0) vsource  DC  20.
#           v(V_cc)    v(in)      v(out)     iter(0)    vc(X1.q1)  vce(X1.q1)
 27.        20.        0.         0.         16.        10.213     9.2279    
#Freq       v(V_cc)    v(in)      v(amp_in)  v(out)    
 1.K        18.222p    0.2        0.099968   0.        
#           v(V_cc)    v(in)      v(out)     iter(0)   
 27.        20.        0.         0.         16.       
#Freq       v(V_cc)    v(in)      v(amp_in)  v(out)    
 1.K        18.222p    0.2        0.099968   0.        
